[gd_scene load_steps=13 format=3 uid="uid://x35k2hyw8mcr"]

[ext_resource type="Script" uid="uid://b010dt6v25trf" path="res://addons/godot-rollback-netcode/NetworkTimer.gd" id="1"]
[ext_resource type="Script" uid="uid://dv11pt6y7wasy" path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" id="2"]
[ext_resource type="Script" uid="uid://b3vinramtp4ia" path="res://game/fighter/projectiles/ProjectilePlayer.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://cwoqesvdf08m3" path="res://game/fighter/Hurtbox.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://tq7jpwpmpnav" path="res://game/assets/sprites/Empty_0000.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b8a4nr02pla40" path="res://game/assets/sprites/mio/ForwardAirDash/Timeline 1_0000.png" id="7"]
[ext_resource type="Material" uid="uid://bt3lvyqtd78u0" path="res://game/assets/shaders/ColorSwapMat.tres" id="40"]
[ext_resource type="PackedScene" uid="uid://bvgu0aev8rq4g" path="res://game/fighter/Hitbox.tscn" id="44"]

[sub_resource type="SGRectangleShape2D" id="1"]
extents_x = 4063232
extents_y = 8847360

[sub_resource type="Animation" id="2"]
resource_name = "Active"
length = 0.333334
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0166667),
"transitions": PackedFloat32Array(1e+06, 1e+06),
"update": 1,
"values": [ExtResource("5"), ExtResource("7")]
}

[sub_resource type="Animation" id="3"]
resource_name = "Destroy"
length = 0.166667
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xovf8"]
_data = {
&"Active": SubResource("2"),
&"Destroy": SubResource("3")
}

[node name="HighMioCannon" type="SGCharacterBody2D"]
script = ExtResource("3")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("40")
position = Vector2(280, 14)
scale = Vector2(1.51119, 0.608707)
texture = ExtResource("5")

[node name="Pushbox" type="SGCollisionShape2D" parent="."]
shape = SubResource("1")
disabled = true
fixed_position_x = 65536
fixed_position_y = 196608
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(1, 3)

[node name="NetworkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xovf8")
}
script = ExtResource("2")
auto_reset = false

[node name="Hitbox1" parent="." instance=ExtResource("44")]
fixed_position_x = 18087936
fixed_position_y = 1245184
fixed_scale_x = 2072698
fixed_scale_y = 426496
position = Vector2(276, 19)
scale = Vector2(31.6269, 6.50781)

[node name="Hurtbox1" parent="." instance=ExtResource("4")]
fixed_position_x = 17367036
fixed_position_y = 1376256
fixed_scale_x = 2131526
fixed_scale_y = 406703
position = Vector2(265, 21)
scale = Vector2(32.5245, 6.2058)

[node name="ExplosionTimer" type="Node" parent="."]
script = ExtResource("1")
wait_ticks = 15
